eglibc (2.9-12) unstable; urgency=low

  * 

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2009 15:40:40 +0200

eglibc (2.9-11) unstable; urgency=low

  * Switch to Embedded GLIBC (EGLIBC), sources taken from the 2.9
    branch.
    - Update all/submitted-readme-version.diff.
    - Update any/local-bashisms.diff.
    - Update any/cvs-bz9697-posix-regcomp.diff.
    - Update any/cvs-binutils_2.20.diff.
    - Drop any/local-makeconfig.diff.
    - Drop any/submitted-getcwd-sys_param_h.diff (merged in eglibc).
    - Add any/submitted-cross-zic.diff to fix biarch builds.
    - Add any/submitted-nss-nsswitch.diff to fix linuxthreads builds.
    - Add any/submitted-install-map-files.diff to fix GNU/Hurd builds.
    - More tests of flavour/biarch builds are run, update the expected
      testsuite results accordingly.
    - Rename glibc-source package into eglibc-source.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2009 09:54:14 +0200

glibc (2.9-10) unstable; urgency=low

  [ Samuel Thibault ]
  * hurd-i386/local-pthread_posix-option.diff: Set _POSIX_TIMEOUTS to 200112
    too, to fix gthread compilation in gcc-4.4

  [ Petr Salinger ]
  * fix up GNU/kFreeBSD specific macro LIST_FOREACH_SAFE.
  
  [ Aurelien Jarno ]
  * any/cvs-broken-dns.diff: backport more parts from upstream.
  * any/submitted-broken-dns.diff: new patch to not raise an error if one
    query returns NOTIMP or FORMERR and the other NOERROR.  Closes: #526823.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2009 01:39:50 +0200

glibc (2.9-9) unstable; urgency=low

  * mips/cvs-context.diff: add missing part from upstream.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Apr 2009 23:11:30 +0200

glibc (2.9-8) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update Swedish debconf translation, by Martin Bagger.  Closes: #522982.
  * mips/cvs-context.diff: new patch from upstream to add getcontext, 
    setcontext, makecontext, swapcontext.