@@ -1,5 +1,8 @@
 eglibc (2.9-12) unstable; urgency=low
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 2501 (from glibc-bsd).
+
   * 
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2009 15:40:40 +0200
